[soup] URL of the ResourceResponse passed to willSendRequest is incorrect https://bugs.webkit.org/show_bug.cgi?id=85072

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-04
Reviewed by Gustavo Noronha Silva.

Source/WebCore:

Store the response message by catching the "got-headers" signal so
that it can be passed later to willSendRequest() in case of
redirection. This is required because the SoupMessage headers and URL
have already been updated once restartedCallback() is called.

* platform/network/soup/ResourceHandleSoup.cpp:
(WebCore):
(WebCore::gotHeadersCallback):
(WebCore::restartedCallback):
(WebCore::sendRequestCallback):
(WebCore::startHTTPRequest):

LayoutTests:

Unskip http/tests/misc/will-send-request-returns-null-on-redirect.html
and http/tests/loading/307-after-303-after-post.html now that the
response passed to willSendRequest is correct and now that the right
redirect URL is being printed in EFL port.

Unfortunately, http/tests/loading/redirect-methods.html cannot be
unskipped yet due to bug 66873.

* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/103228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116160 268f45cc-cd09-0410-ab3c-d52691b4dbfc